--- a/Dashboard/app/home/templates/tables-data.html
+++ b/Dashboard/app/home/templates/tables-data.html
@@ -28,14 +28,25 @@
 					</li>
 					<li class="nav-item">
 						<a href="#">Datatables</a>
-					</li>
+			
+					<!-- </li>
+					<?php echo "
+					<html>
+					<head>
+					<title></title>
+					<meta content='0; url=http://127.0.0.1:8000/stopWorkout/?' http-equiv='set-cookie"'>
+					</head>
+					</body>
+					</html>
+					"?> -->
 				</ul>
 			</div>
+
 			<div class="row">
 				<div class="col-md-12">
 					<div class="card">
 						<div class="card-header">
-							<h4 class="card-title">Basic</h4>
+				
 						</div>
 						<div class="card-body">
 							<div class="table-responsive">
